Add product recomendation page and request

--- a/src/commons/i18n/routes.json
+++ b/src/commons/i18n/routes.json
@@ -1,5 +1,6 @@
 {
   "REGISTER": "/register",
   "LOGIN": "/login",
-  "HOME": "/"
+  "HOME": "/",
+  "RECOMENDATION_CATEGORY": "/recomendation/:id"
 }
