Add user menu options in header component

--- a/src/commons/i18n/routes.json
+++ b/src/commons/i18n/routes.json
@@ -2,5 +2,7 @@
   "REGISTER": "/register",
   "LOGIN": "/login",
   "HOME": "/",
-  "RECOMENDATION_CATEGORY": "/recomendation/:id"
+  "RECOMENDATION_CATEGORY": "/recomendation/:id",
+  "MY_PROFILE": "my-profile",
+  "PRODUCT_HISTORY": "product-history"
 }
